--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ label {
     border-radius: 5px;
   }
   
-#calculateButton {
+#calculateButton, #systemTimeButton {
     padding: 10px 20px;
     font-size: 16px;
     background-color: #3182ce;
@@ -81,6 +81,7 @@ label {
     cursor: pointer;
     transition: background-color 0.3s;
 	margin-top: 20px;  
+    margin-bottom: 10px;
 }
 
 #calculateButton:hover {
